--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/notification/notification.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/notification/notification.component.html
@@ -1,9 +1,5 @@
 <ng-container *ngIf="notificationService.activeNotification">
-    <div class="notification" [class.notification-noaction]="!notificationService.activeNotification.action"
-        (click)="notificationService.currentNotificationAction()">
-        <i class="fa" [ngClass]="notificationService.activeNotification.icon"></i>
-        {{notificationService.activeNotification.title}}
-        <i *ngIf="!notificationService.activeNotification.disableDismiss" class="fa fa-close pull-right"
-            (click)="notificationService.dismiss()"></i>
-    </div>
+<fab-message-bar [messageBarType]="notificationService.activeNotification.type" isMultiline="false" dismissButtonAriaLabel="Close" [dismissable]="!notificationService.activeNotification.disableDismiss" [truncated]="true" [styles]="styles" (click)="notificationService.currentNotificationAction()"
+  overflowButtonAriaLabel="See more">{{notificationService.activeNotification.title}}</fab-message-bar>
+<div style="margin-bottom: 5px;"></div>
 </ng-container>
