--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-notification/risk-alerts-notification.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-notification/risk-alerts-notification.component.html
@@ -1,2 +1,6 @@
-<fab-message-bar [messageBarType]="type" dismissable="true" isMultiline="false" dismissButtonAriaLabel="Close" [truncated]="true" [styles]="styles"
-  overflowButtonAriaLabel="See more">We detected missing configurations that will increase risk of a downtime. Please check <a (click)="openRiskAlertsPanel()">Availability risk alerts</a>.</fab-message-bar>
+<ng-container *ngIf="showRiskAlertsNotification">
+  <fab-message-bar [messageBarType]="type" dismissable="true" isMultiline="false" dismissButtonAriaLabel="Close"
+    [truncated]="true" [styles]="styles" overflowButtonAriaLabel="See more">We detected missing configurations in your
+    application that will increase risk of a downtime. Please check <a (click)="openRiskAlertsPanel()">Availability risk
+      alerts</a>.</fab-message-bar>
+</ng-container>
