--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.html
@@ -16,7 +16,8 @@
   </ng-container>
 
   <div id="app-content" [ngClass]="{'panel-body-withtab':isLegacy, 'panel-body-notab':!isLegacy}" class="panel-body" style="scroll-behavior: smooth;">
-    <!-- <notification></notification> -->
+    <notification></notification>
+    <risk-alerts-notification></risk-alerts-notification>
     <div class="tab-content container-fluid" [ngClass]="{'panel-body-nopadding':!isLegacy, 'panel-body-padding':isLegacy}">
       <ng-content></ng-content>
     </div>
