--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-feedback/fabric-feedback.component.html
@@ -5,7 +5,7 @@
       <h3>Send us feedback</h3>
       <p>Thank you for taking the time to give us feedback</p>
       <div style="display:inline-flex">
-        <svg class="svg-icon" viewBox="0 0 6 6" rorele="presentation" focusable="false"
+        <svg class="svg-icon" viewBox="0 0 6 6" role="presentation" focusable="false"
           xmlns:svg="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="6px" height="6px">
           <g>
             <path
