Bug fixing and make risk and outage alerts undismissable

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-notification/risk-alerts-notification.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-notification/risk-alerts-notification.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="showRiskAlertsNotification">
-  <fab-message-bar [messageBarType]="type" dismissable="true" isMultiline="false" dismissButtonAriaLabel="Close"
+  <fab-message-bar [messageBarType]="type" isMultiline="false" dismissButtonAriaLabel="Close"
     [truncated]="true" [styles]="styles" overflowButtonAriaLabel="See more">We detected missing configurations in your
     application that will increase risk of a downtime. Please check <a (click)="openRiskAlertsPanel()">Availability risk
       alerts</a>.</fab-message-bar>
