--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-panel/risk-alerts-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-panel/risk-alerts-panel.component.html
@@ -47,7 +47,7 @@
       <br />
     </ng-container>
     <ng-container *ngIf="appDensityCheckDetail">
-      <fab-message-bar [messageBarType]="appDensityCheckDetail.MessageType" [isMultiline]="false"
+      <fab-message-bar [messageBarType]="appDensityCheckDetail.messageType" [isMultiline]="false"
         dismissButtonAriaLabel="Close" [truncated]="true" overflowButtonAriaLabel="See more">
         <p><b>{{appDensityCheckDetail.title}} </b> </p>{{appDensityCheckDetail.description}}
         <br /><br />
