Filter function app and linux app, also add resource info panel for applens

--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -11,10 +11,11 @@
         <span *ngIf="userName">Hello, {{userName}}</span>
       </li>
       <li>
-        <img *ngIf="userPhotoSource != undefined && userPhotoSource !== ''" id="userPhoto" [src]="userPhotoSource" class="avatar"
-          alt="User Profile Photo" (click)="navigateToUserPage()" />
-        <ngx-avatar *ngIf="displayName != undefined && displayName !== '' && userPhotoSource === ''" class="avatar avatar-initial"
-          [round]="false" [name]=displayName initialsSize="2" (click)="navigateToUserPage()"></ngx-avatar>
+        <img *ngIf="userPhotoSource != undefined && userPhotoSource !== ''" id="userPhoto" [src]="userPhotoSource"
+          class="avatar" alt="User Profile Photo" (click)="navigateToUserPage()" />
+        <ngx-avatar *ngIf="displayName != undefined && displayName !== '' && userPhotoSource === ''"
+          class="avatar avatar-initial" [round]="false" [name]=displayName initialsSize="2"
+          (click)="navigateToUserPage()"></ngx-avatar>
         <div *ngIf="userPhotoSource == undefined" class="loading-element">
           <span class="fa-li fa fa-spinner fa-spin fa-2x photo-loading"></span>
         </div>
@@ -22,8 +23,11 @@
     </ul>
     <div *ngIf="_searchService.searchIsEnabled && !_searchService.resourceHomeOpen" class="search-box">
       <i class="fa fa-search search-icon"></i>
-      <input placeholder="Describe your problem and hit enter" class="search-input" [(ngModel)]="_searchService.searchTerm" (keyup.enter)="triggerSearch()">
-      <span class="icon-err" [style.display]="_searchService.searchTerm?.trim().length>0 && _searchService.searchTerm?.trim().length<4? '': 'none'" title="At least 4 characters">
+      <input placeholder="Describe your problem and hit enter" class="search-input"
+        [(ngModel)]="_searchService.searchTerm" (keyup.enter)="triggerSearch()">
+      <span class="icon-err"
+        [style.display]="_searchService.searchTerm?.trim().length>0 && _searchService.searchTerm?.trim().length<4? '': 'none'"
+        title="At least 4 characters">
         <i class="fa fa-exclamation"></i>
       </span>
     </div>
@@ -46,22 +50,32 @@
   <side-nav></side-nav>
   <div class="content-wrapper gray-background">
     <router-outlet></router-outlet>
-    <ngx-smart-modal #resourceInfoModal identifier="resourceInfoModal" [customClass]="'info-modal'">
-      <div class="modal-header" style="background-color: #4968d0; padding: 10px 15px 10px 15px">
-        <h4 class="modal-title" id="myModalLabel" style="color:white">Resource Information</h4>
-      </div>
-      <div class="modal-content">
-        <div class="resource-content">
-          <div *ngIf="observerLink !== ''">
-            <a href="{{observerLink}}" target="_blank">Observer Link
-              <i class="fa fa-link" aria-hidden="true"></i>
-            </a>
-          </div>
-          <div *ngFor="let key of keys">
-            <b>{{key}}:</b> {{resource[key]}}&nbsp;<span *ngIf="resource[key] !== ''"><img src="/assets/img/copy-icon.png" style="height: 12px;" (click)="copyToClipboard(resource[key], $event)" alt="Copy to clipboard" /></span>
+    <fab-panel [isOpen]="openResourceInfoPanel" [type]="type" [customWidth]="width" [isHiddenOnDismiss]="true"
+      [styles]="panelStyles" [isLightDismiss]="true" [hasCloseButton]="true" [closeButtonAriaLabel]="'close'"
+      (onDismissed)="dismissedHandler()">
+      <div>
+        <div class="row">
+          <div>
+            <div style="margin-bottom: 10px">
+              <div
+                style="position: absolute; left:25px; right: 32px; top:0px; height: 32px; font-family: 'segoe UI'; font-size: 18px; line-height: 24px; font-weight: 600;display: flex; align-items: flex-end"
+                tabindex="0" aria-label="Comm alerts">
+                Resource Information</div>
+            </div>
+            <div class="resource-content">
+              <div *ngIf="observerLink !== ''">
+                <a href="{{observerLink}}" target="_blank">Observer Link
+                  <i class="fa fa-link" aria-hidden="true"></i>
+                </a>
+              </div>
+              <div *ngFor="let key of keys">
+                <b>{{key}}:</b> {{resource[key]}}&nbsp;<span *ngIf="resource[key] !== ''"><img
+                    src="/assets/img/copy-icon.png" style="height: 12px;"
+                    (click)="copyToClipboard(resource[key], $event)" alt="Copy to clipboard" /></span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </ngx-smart-modal>
+    </fab-panel>
   </div>
-</div>
