New Home page for Diag&Solve  (#963)
* Revamp homepage

* Update css style for tile

* Create risk tile component,update style

* Update risk tile style

* Enable quickLinks able to get from json

* Update image

* Update risk tile to pass function

* Update async stream

* Add spinner and logic for risk tile

* add risk model

* move method to risk model

* Update with only show risk for windows web app

* pass exception to risk tile

* Add refresh and log

* Add logs

* clean comments

* Update to "ask Genie"

* add log for feedbackPanelOpen

* Rename to TelemetrySource

* Add logging after tile loaded

* Change to not hard code for title and description

* Remove one '-'

* Rename best practice to risk assessment

* Update Init focus

* Update function description

* Update feature.service

* Update to hide nav-bar and quick link

* Remove switch bar

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-tile-v4/category-tile-v4.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-tile-v4/category-tile-v4.component.html
@@ -1,24 +1,12 @@
-<!-- <div class="category-container" (click)="navigateToCategory()" (keyup.enter)="navigateToCategory()" -->
-  <div class="category-container" (click)="openBladeDiagnoseCategoryBlade()" (keyup.enter)="openBladeDiagnoseCategoryBlade()"
-  (keyup.space)="openBladeDiagnoseCategoryBlade()" tabindex="0" role="button">
-  <!-- <div class="title-container" [style.background-color]="category.color">
-    {{category.name}}
-  </div> -->
-  <!-- <div class="category-body"> -->
+<div (click)="openBladeDiagnoseCategoryBlade()" (keyup.enter)="openBladeDiagnoseCategoryBlade()"
+  (keyup.space)="openBladeDiagnoseCategoryBlade()" tabindex="0" role="button" class="category-tile">
   <div>
-    <div class="image-container"><img [src]="categoryImgPath" /></div>
-    <h2 class="category-title">{{category.name}}</h2>
-    <p class="category-description">{{category.description}}</p>
-    <div>
-    <span class="keyword-label">Keywords:</span>
-    <div class="keywords">
-          <!-- <div class="keyword"  *ngFor="let keyword of category.keywords">
-            {{keyword}}
-          </div> -->
-          <div class="keyword">
-            {{keywords}}
-          </div>
-        </div>
-    </div>
+    <img class="tile-image" [src]="categoryImgPath">
+  </div>
+  <div class="tile-content">
+    <h3 class="tile-title">{{category.name}}</h3>
+    <p class="tile-description">{{category.description}}</p>
+    <p class="tile-keywords">Ex: {{keywords}}</p>
+    <a>Troubleshoot</a>
   </div>
 </div>
